--- a/Movie-Magic-Workshop/views/home.html
+++ b/Movie-Magic-Workshop/views/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Catalog Page</title>
     <!-- Do not forget to change the path to the css file -->
-    <link href="./static/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./public/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
