--- a/Movie-Magic-Workshop/views/create.hbs
+++ b/Movie-Magic-Workshop/views/create.hbs
@@ -29,7 +29,7 @@
                             </li>
                             <li>
                                 <label for="image">Rating:</label>
-                                <input type="text" class="inputFields" id="rating" name="rating" value="" />
+                                <input type="number" max="5" class="inputFields" id="rating" name="rating" value="" />
                             </li>
                             <li>
                                 <label for="description">Description:</label>
