--- a/Movie-Magic-Workshop/views/home.hbs
+++ b/Movie-Magic-Workshop/views/home.hbs
@@ -1,33 +1,8 @@
-       
-
-            <section id="catalog">
-                <h1>All Movies</h1>
-                <div class="band">
-                    {{#each movies}}
-                        <!-- If there are posts for creature in the database display each of them -->
-                        <div class="flip flip-vertical">
-                            <div class="front">
-                                <img src="{{ imageUrl }}"
-                                    alt="{{ title }}">
-                            </div>
-                            <div class="back">
-                                <h1>{{ title }}</h1>
-                                <h2>Genre: {{ genre }}</h2>
-                                <p>Description: {{ description }}</p>
-                                <a href="/movies/{{_id}}" class="details">Details</a>
-                            </div>
-                        </div>
-                    {{else}}
-
-                        <div class="no-posts">
-                            <p class="no-offer">There are no posts yet...</p>
-                        </div>
+<section id="catalog">
+    <h1>All Movies</h1>
+        <div class="band">
                     
-                    {{/each}}
+            {{> catalogue}}
 
-                    
-
-                    
-                   
-                </div>
-            </section>
+        </div>
+</section>
