Creating movie and send to database

--- a/Movie-Magic-Workshop/views/create.hbs
+++ b/Movie-Magic-Workshop/views/create.hbs
@@ -25,7 +25,7 @@
                             </li>
                             <li>
                                 <label for="image">Movie Poster:</label>
-                                <input type="text" class="inputFields" id="image" name="ImageUrl" value="" />
+                                <input type="string" class="inputFields" id="image" name="imageURL" value="" />
                             </li>
                             <li>
                                 <label for="image">Rating:</label>
