put movies catalogue on Home page

--- a/Movie-Magic-Workshop/views/details.hbs
+++ b/Movie-Magic-Workshop/views/details.hbs
@@ -27,7 +27,7 @@
                     </div>
 
                     <div class="card_right">
-                        <img src="{{ movie.imageUrl }}"
+                        <img src="{{ movie.imageURL }}"
                             alt="image">
                     </div>
 
