--- a/Movie-Magic-Workshop/views/partials/catalogue.hbs
+++ b/Movie-Magic-Workshop/views/partials/catalogue.hbs
@@ -2,7 +2,7 @@
                         <!-- If there are posts for creature in the database display each of them -->
                         <div class="flip flip-vertical">
                             <div class="front">
-                                <img src="{{ imageUrl }}"
+                                <img src="{{ imageURL }}"
                                     alt="{{ title }}">
                             </div>
                             <div class="back">
